Ideas card spacing fix

--- a/kh1/css/style.css
+++ b/kh1/css/style.css
@@ -344,7 +344,7 @@ h2.narrow {
   background: #fff;
   border: 1px solid #DBDBDB;
   margin-bottom: 25px;
-  width: 44%;
+  width: 41%;
 }
 
 .idea-card h6 {
